add subscription and questions

--- a/src/index.html
+++ b/src/index.html
@@ -80,9 +80,9 @@
                     новостные и многие другие каналы
                   </p>
 
-                  <button class="trial__button">
+                  <a href="#" class="trial__button">
                     Протестировать 7 дней бесплатно
-                  </button>
+                  </a>
                 </div>
 
                 <img
@@ -162,6 +162,255 @@
         </div>
       </div>
     </header>
+
+    <main>
+      <section class="subscription">
+        <div class="container">
+          <div class="subscription__content">
+            <div class="subscription__about">
+              <div class="subscription__price">
+                <h4 class="subscription__price-text">
+                  <p class="subscription__value">
+                    1€
+                  </p> / МЕСЯЦ
+                </h4>
+
+                <p>
+                  Покупая подписку<br >
+                  более, чем на 6 месяцев
+                </p>
+              </div>
+
+              <ul class="subscription__list">
+                <li class="subscription__item">
+                  <img
+                    src="./images/checked.svg"
+                    alt="check mark"
+                    class="subscription__check-mark"
+                  >
+
+                  <p class="subscription__text">
+                    Более 250 каналов
+                  </p>
+                </li>
+                <li class="subscription__item">
+                  <img
+                    src="./images/checked.svg"
+                    alt="check mark"
+                    class="subscription__check-mark"
+                  >
+
+                  <p class="subscription__text">
+                    127 FullHD каналов
+                  </p>
+                </li>
+                <li class="subscription__item">
+                  <img
+                    src="./images/checked.svg"
+                    alt="check mark"
+                    class="subscription__check-mark"
+                  >
+
+                  <p class="subscription__text">
+                    Режим Ultra TV Sport
+                  </p>
+                </li>
+                <li class="subscription__item">
+                  <img
+                    src="./images/checked.svg"
+                    alt="check mark"
+                    class="subscription__check-mark"
+                  >
+
+                  <p class="subscription__text">
+                    7 дней архива каналов
+                  </p>
+                </li>
+                <li class="subscription__item">
+                  <img
+                    src="./images/checked.svg"
+                    alt="check mark"
+                    class="subscription__check-mark"
+                  >
+
+                  <p class="subscription__text">
+                    5 устройств = 1 подписка
+                  </p>
+                </li>
+              </ul>
+            </div>
+
+            <form class="subscription__email">
+              <input
+                type="email"
+                placeholder="Email"
+                class="subscription__input"
+              >
+
+              <button class="subscription__button">
+                Подключить тариф
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+
+      <section class="trial">
+        <div class="container">
+          <div class="trial__content">
+            <div class="trial__about">
+              <h1 class="trial__title">
+                Смотрите на разных<br>устройствах
+              </h1>
+
+              <img
+                src="./images/devices.webp"
+                alt="devices image"
+                class="trial__image"
+              >
+
+              <p class="trial__text">
+                Подключайте подписку FULL и смотрите любимые каналы на 5 устройствах, среди которых: телевизор, компьютер, планшет или смартфон
+              </p>
+
+              <a href="#" class="trial__button">
+                Протестировать 7 дней бесплатно
+              </a>
+            </div>
+
+            <img
+              src="./images/devices.webp"
+              alt="devices image"
+              class="trial__large-image"
+            >
+          </div>
+        </div>
+      </section>
+
+      <section class="supported">
+        <div class="container">
+          <div class="supported__content">
+            <div class="supported__item">
+              <img
+                src="./images/devices/lg.svg"
+                alt="lg smart tv logo"
+                class="supported__image"
+              >
+            </div>
+
+            <div class="supported__item">
+              <img
+                src="./images/devices/ios.svg"
+                alt="ios logo"
+                class="supported__image"
+              >
+            </div>
+
+            <div class="supported__item">
+              <img
+                src="./images/devices/android.svg"
+                alt="android tv logo"
+                class="supported__image"
+              >
+            </div>
+
+            <div class="supported__item">
+              <img
+                src="./images/devices/samsung.svg"
+                alt="samsung smart tv logo"
+                class="supported__image"
+              >
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="questions">
+        <div class="container">
+          <h2 class="questions__title">
+            Популярные вопросы
+          </h2>
+
+          <ul class="questions__list">
+            <li class="questions__item">
+              <p class="questions__text">
+                Как подключить подписку OTTCLUB или продлить её?
+              </p>
+
+              <img
+                src="./images/down.svg"
+                alt="open question answer"
+                class="questions__img"
+              >
+            </li>
+
+            <li class="questions__item">
+              <p class="questions__text">
+                Как смотреть одновременно на разных устройствах?
+              </p>
+
+              <img
+                src="./images/down.svg"
+                alt="open question answer"
+                class="questions__img"
+              >
+            </li>
+
+            <li class="questions__item">
+              <p class="questions__text">
+                Какая скорость соединения необходима для просмотра каналов?
+              </p>
+
+              <img
+                src="./images/down.svg"
+                alt="open question answer"
+                class="questions__img"
+              >
+            </li>
+
+            <li class="questions__item">
+              <p class="questions__text">
+                Как смотреть на телевизоре Samsung?
+              </p>
+
+              <img
+                src="./images/down.svg"
+                alt="open question answer"
+                class="questions__img"
+              >
+            </li>
+
+            <li class="questions__item">
+              <p class="questions__text">
+                Как посмотреть передачу, которая была в эфире ранее?
+              </p>
+
+              <img
+                src="./images/down.svg"
+                alt="open question answer"
+                class="questions__img"
+              >
+            </li>
+
+            <li class="questions__item">
+              <p class="questions__text">
+                Как работает бесплатный тестовый период?
+              </p>
+
+              <img
+                src="./images/down.svg"
+                alt="open question answer"
+                class="questions__img"
+              >
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__divider"></div>
+    </footer>
   </body>
 </html>
 
