--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
   </head>
   <body class="page__body">
     <header class="header">
-      <div class="container">
+      <div class="header__container">
         <div class="header__content">
           <nav class="header__nav">
             <a href="/" class="header__logo">
@@ -62,7 +62,7 @@
           </nav>
 
           <section class="trial">
-            <div class="container">
+            <div class="trial__container">
               <div class="trial__content">
                 <div class="trial__about">
                   <h1 class="trial__title">
@@ -80,7 +80,7 @@
                     новостные и многие другие каналы
                   </p>
 
-                  <a href="#" class="trial__button">
+                  <a href="#subscription" class="trial__button">
                     Протестировать 7 дней бесплатно
                   </a>
                 </div>
@@ -95,7 +95,7 @@
           </section>
 
           <section class="benefits">
-            <div class="container">
+            <div class="benefits__container">
               <div class="benefits__content">
                 <div class="benefits__item">
                   <img
@@ -164,9 +164,18 @@
     </header>
 
     <main>
-      <section class="subscription">
-        <div class="container">
+
+      <section class="subscription" id="subscription">
+        <div class="subscription__container">
           <div class="subscription__content">
+            <div class="subscription__eye">
+              <img
+                src="./images/eye.png"
+                alt="eye"
+                class="subscription__eye-image"
+              >
+            </div>
+
             <div class="subscription__about">
               <div class="subscription__price">
                 <h4 class="subscription__price-text">
@@ -256,7 +265,7 @@
       </section>
 
       <section class="channels">
-        <div class="container">
+        <div class="channels__container">
           <div class="channels__content">
             <div class="channels__title">
               <h4 class="channels__title-text">
@@ -424,7 +433,7 @@
       </section>
 
       <section class="trial">
-        <div class="container">
+        <div class="trial__container">
           <div class="trial__content">
             <div class="trial__about">
               <h1 class="trial__title">
@@ -441,7 +450,7 @@
                 Подключайте подписку FULL и смотрите любимые каналы на 5 устройствах, среди которых: телевизор, компьютер, планшет или смартфон
               </p>
 
-              <a href="#" class="trial__button">
+              <a href="#subscription" class="trial__button">
                 Протестировать 7 дней бесплатно
               </a>
             </div>
@@ -456,7 +465,7 @@
       </section>
 
       <section class="supported">
-        <div class="container">
+        <div class="supported__container">
           <div class="supported__content">
             <ul class="supported__list">
               <li class="supported__item">
@@ -496,12 +505,12 @@
       </section>
 
       <section class="questions">
-        <div class="container">
+        <div class="questions__container">
           <h2 class="questions__title">
             Популярные вопросы
           </h2>
 
-          <div class="questions__container">
+          <div class="questions__content">
             <div class="grid grid--desktop">
               <ul
                 class="
@@ -512,9 +521,17 @@
                 "
               >
                 <li class="questions__item">
-                  <p class="questions__text">
-                    Как подключить подписку OTTCLUB или продлить её?
-                  </p>
+                  <div class="questions__question">
+                    <p class="questions__text">
+                      Как подключить подписку OTTCLUB или продлить её?
+                    </p>
+
+                    <img
+                    src="./images/down.svg"
+                    alt="open question answer"
+                    class="questions__img"
+                    >
+                  </div>
 
                   <p class="questions__answer">
                     Войдите в свой аккаунт, используя свои учетные данные.
@@ -524,44 +541,41 @@
                     Получите уведомление о успешном подключении или продлении подписки.
                     Наслаждайтесь контентом и возможностями выбранного тарифа.
                   </p>
-
-                  <img
-                    src="./images/down.svg"
-                    alt="open question answer"
-                    class="questions__img"
-                  >
                 </li>
 
                 <li class="questions__item">
-                  <p class="questions__text">
-                    Как смотреть одновременно на разных устройствах?
-                  </p>
+                  <div class="questions__question">
+                    <p class="questions__text">
+                      Как смотреть одновременно на разных устройствах?
+                    </p>
 
+                    <img
+                    src="./images/down.svg"
+                    alt="open question answer"
+                    class="questions__img"
+                    >
+                  </div>
                   <p class="questions__answer">
                     Для одновременного просмотра на разных устройствах на OTTCLUB, убедитесь, что у вас активная подписка и войдите в свой аккаунт на разных устройствах, чтобы наслаждаться контентом одновременно.
                   </p>
-
-                  <img
-                    src="./images/down.svg"
-                    alt="open question answer"
-                    class="questions__img"
-                  >
                 </li>
 
                 <li class="questions__item">
-                  <p class="questions__text">
-                    Какая скорость соединения необходима для просмотра каналов?
-                  </p>
+                  <div class="questions__question">
+                    <p class="questions__text">
+                      Какая скорость соединения необходима для просмотра каналов?
+                    </p>
+
+                    <img
+                    src="./images/down.svg"
+                    alt="open question answer"
+                    class="questions__img"
+                    >
+                  </div>
 
                   <p class="questions__answer">
                     Для комфортного просмотра каналов на OTTCLUB рекомендуется минимальная скорость интернет-соединения не менее 5 Мбит/с. Однако для более высококачественного воспроизведения и избежания буферизации, скорость интернета от 10 Мбит/с будет более предпочтительной.
                   </p>
-
-                  <img
-                    src="./images/down.svg"
-                    alt="open question answer"
-                    class="questions__img"
-                  >
                 </li>
               </ul>
 
@@ -573,9 +587,17 @@
                 "
               >
                 <li class="questions__item">
-                  <p class="questions__text">
-                    Как смотреть на телевизоре Samsung?
-                  </p>
+                  <div class="questions__question">
+                    <p class="questions__text">
+                      Как смотреть на телевизоре Samsung?
+                    </p>
+
+                    <img
+                    src="./images/down.svg"
+                    alt="open question answer"
+                    class="questions__img"
+                    >
+                  </div>
 
                   <p class="questions__answer">
                     Убедитесь, что ваш телевизор подключен к интернету.
@@ -585,44 +607,42 @@
                     Запустите приложение OTTCLUB.
                     Введите свои учетные данные для входа в свой аккаунт
                   </p>
-
-                  <img
-                    src="./images/down.svg"
-                    alt="open question answer"
-                    class="questions__img"
-                  >
                 </li>
 
                 <li class="questions__item">
-                  <p class="questions__text">
-                    Как посмотреть передачу, которая была в эфире ранее?
-                  </p>
+                  <div class="questions__question">
+                    <p class="questions__text">
+                      Как посмотреть передачу, которая была в эфире ранее?
+                    </p>
+
+                    <img
+                      src="./images/down.svg"
+                      alt="open question answer"
+                      class="questions__img"
+                    >
+                  </div>
 
                   <p class="questions__answer">
                     Чтобы посмотреть передачу, которая была в эфире ранее, перейдите в раздел "Архив" или "Просмотр назад" в приложении OTTCLUB. Там вы сможете выбрать нужное время и дату для просмотра записи передачи, которая вас интересует.
                   </p>
-
-                  <img
-                    src="./images/down.svg"
-                    alt="open question answer"
-                    class="questions__img"
-                  >
                 </li>
 
                 <li class="questions__item questions__item--last">
-                  <p class="questions__text">
-                    Как работает бесплатный тестовый период?
-                  </p>
+                  <div class="questions__question">
+                    <p class="questions__text">
+                      Как работает бесплатный тестовый период?
+                    </p>
+
+                    <img
+                      src="./images/down.svg"
+                      alt="open question answer"
+                      class="questions__img"
+                    >
+                  </div>
 
                   <p class="questions__answer">
                     Бесплатный тестовый период позволяет пользоваться сервисом OTTCLUB бесплатно на определенное количество дней. Для активации нужно предоставить платежные данные. Если не хотите продлевать подписку, отмените до окончания периода.
                   </p>
-
-                  <img
-                    src="./images/down.svg"
-                    alt="open question answer"
-                    class="questions__img"
-                  >
                 </li>
               </ul>
             </div>
@@ -632,7 +652,7 @@
     </main>
 
     <footer class="footer">
-      <div class="container">
+      <div class="footer__container">
         <div class="footer__content">
           <div class="footer__info">
             <div class="footer__about">
